new version footer

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,13 @@
-<section id="development">
-    <p>
-        Feito com carinho <h2 class="copyright">Desenvolvido por <a href="http://www.iconeinternet.com.br">Ícone Agência Digital</a></h2>
-    </p>
-</section>
+<link rel="stylesheet" href="./assets/css/footer.min.css">
+<div class="development">
+		<article>
+				<div>
+						feito com <i id="coracao" class="pulse"></i>
+				</div>
+				<div>
+						<a id="link" href="https://www.iconeinternet.com.br/" target="_blank">
+								<img src="./assets/images/icone.png">
+						</a>
+				</div>
+		</article>
+</div>
