--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="./assets/css/footer.min.css">
+<link rel="stylesheet" href="https://www.iconeinternet.com.br/plugin/footer/assets/css/footer.min.css">
 <div class="development">
 		<article>
 				<div>
@@ -6,7 +6,7 @@
 				</div>
 				<div>
 						<a id="link" href="https://www.iconeinternet.com.br/" target="_blank">
-								<img src="./assets/images/icone.png">
+								<img src="https://www.iconeinternet.com.br/plugin/footer/assets/images/icone.png">
 						</a>
 				</div>
 		</article>
