--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,12 @@
-<link rel="stylesheet" href="https://www.iconeinternet.com.br/plugin/footer/assets/css/footer.min.css">
+<link rel="stylesheet" href="https://www.iconeagencia.com/plugin/footer/assets/css/footer.min.css">
 <div class="development">
 		<article>
 				<div>
 						feito com <i id="coracao" class="pulse"></i>
 				</div>
 				<div>
-						<a id="link" href="https://www.iconeinternet.com.br/" target="_blank">
-								<img src="https://www.iconeinternet.com.br/plugin/footer/assets/images/icone.png">
+						<a id="link" href="https://www.iconeagencia.com/" target="_blank">
+								<img src="https://www.iconeagencia.com/plugin/footer/assets/images/icone.png">
 						</a>
 				</div>
 		</article>
