--- a/footer.html
+++ b/footer.html
@@ -5,9 +5,9 @@
 						feito com <i id="coracao" class="pulse"></i>
 				</div>
 				<div>
-						<a id="link" href="https://www.iconeinternet.com.br/" target="_blank">
-								<img src="https://www.iconeinternet.com.br/plugin/footer/assets/images/icone.png">
-						</a>
+						<a id="link" href="https://www.iconeagencia.com/" target="_blank" >
+                <img src="https://www.iconeinternet.com.br/plugin/footer/assets/images/icone.png" title="Ícone Criação de Sites" alt="icone criação de sites" >
+            </a>
 				</div>
 		</article>
 </div>
